save code other

--- a/projectjose/templates/core/post.html
+++ b/projectjose/templates/core/post.html
@@ -12,7 +12,7 @@
   <title>White House Architects</title>
 
   <!-- Bootstrap core CSS-->
-  <link href="{% static 'custom/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
   <!-- CSS -->
   <link href="{% static 'css/stylest.css' %}" rel="stylesheet">
@@ -189,8 +189,8 @@
   <!-- /Barra de Navegación -->
 
   <!-- Bootstrap core JavaScript -->
-  <script src="{% static 'custom/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'custom/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'jquery/jquery.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 
 </body>
 
