fixed problem with fonts

--- a/projectjose/templates/storefront/base.html
+++ b/projectjose/templates/storefront/base.html
@@ -6,9 +6,12 @@
 {% endblock title %}
 
 {% block vendors_css %}
-    <link rel="stylesheet" href="{% static 'assets/vendorsito/fonts/circular-std/style.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/vendorsito/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/vendorsito/fonts/fontawesome/css/fontawesome-all.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendorsito/bootstrap/css/bootstrap.min.css' %}">
+      <!-- Íconos -->
+  <script src="https://kit.fontawesome.com/f8e43163b5.js" crossorigin="anonymous"></script>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Inria+Serif:400,700|Raleway:300,400&display=swap" rel="stylesheet">
 {% endblock vendors_css %}
 
 {% block core_css %}
