--- a/projectjose/templates/dashboard/posts/add.html
+++ b/projectjose/templates/dashboard/posts/add.html
@@ -1,6 +1,6 @@
 {% extends './list.html' %}
-{% load crispy_forms_field %}
-{% load crispy_forms_tags %}
+{% comment %} {% load crispy_forms_field %}
+{% load crispy_forms_tags %} {% endcomment %}
 {% load static %}
 
 {% block view_header_back %}
