--- a/projectjose/templates/dashboard/services/_list_empty.html
+++ b/projectjose/templates/dashboard/services/_list_empty.html
@@ -3,6 +3,6 @@
 {% block title %}No se ha registrado ningún proyecto aún.{% endblock title %}
 
 {% block action %}
-    {% url 'dashboard:post-add' as btn_target %}
+    {% url 'dashboard:service-add' as btn_target %}
     {% include 'dashboard/_widgets/_button_new.html' with btn_text='Nuevo' %}
 {% endblock action %}
