--- a/projectjose/templates/storefront/auth/login.html
+++ b/projectjose/templates/storefront/auth/login.html
@@ -3,17 +3,16 @@
 
 {% block vendors_css %}
 <link rel="stylesheet" href="{% static 'assets/vendorsito/bootstrap/css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'assets/vendorsito/fonts/circular-std/style.css' %}">
+<link rel="stylesheet" href="{% static 'assets/vendorsito/fonts/fontawesome/css/fontawesome-all.css' %}">
 {% endblock vendors_css %}
 
 {% block core_css %}
   <link rel="stylesheet" href="{% static 'administrador/css/style.css' %}">
-  <script src="https://kit.fontawesome.com/f8e43163b5.js" crossorigin="anonymous"></script>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Inria+Serif:400,700|Raleway:300,400&display=swap" rel="stylesheet">
 {% endblock core_css %}
 
 {% block custom_css %}
+ <link rel="stylesheet" href="{% static 'storefront/css/custom.css' %}">
 <style>
     html,
     body {
