--- a/projectjose/templates/storefront/auth/login.html
+++ b/projectjose/templates/storefront/auth/login.html
@@ -39,7 +39,7 @@
             </a>
         </div>
         <div class="card-body">
-            {% include "storefront/auth/_forms/login.html" %}
+            {% comment %} {% include "storefront/auth/_forms/login.html" %} {% endcomment %}
         </div>
         <div class="card-footer p-0">
             <div class="card-footer-item card-footer-item-bordered">
