--- a/projectjose/templates/storefront/auth/login.html
+++ b/projectjose/templates/storefront/auth/login.html
@@ -8,7 +8,7 @@
 {% endblock vendors_css %}
 
 {% block core_css %}
-  <link rel="stylesheet" href="{% static 'administrador/css/style.css' %}">
+  {% comment %} <link rel="stylesheet" href="{% static 'administrador/css/style.css' %}"> {% endcomment %}
 {% endblock core_css %}
 
 {% block custom_css %}
