--- a/projectjose/templates/storefront/auth/login.html
+++ b/projectjose/templates/storefront/auth/login.html
@@ -12,7 +12,7 @@
 {% endblock core_css %}
 
 {% block custom_css %}
- <link rel="stylesheet" href="{% static 'storefront/css/custom.css' %}">
+ {% comment %} <link rel="stylesheet" href="{% static 'storefront/css/custom.css' %}"> {% endcomment %}
 <style>
     html,
     body {
