--- a/projectjose/templates/storefront/auth/login.html
+++ b/projectjose/templates/storefront/auth/login.html
@@ -2,17 +2,16 @@
 {% load static %}
 
 {% block vendors_css %}
-{% comment %} <link rel="stylesheet" href="{% static 'assets/vendorsito/bootstrap/css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'assets/vendorsito/bootstrap/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'assets/vendorsito/fonts/circular-std/style.css' %}">
-<link rel="stylesheet" href="{% static 'assets/vendorsito/fonts/fontawesome/css/fontawesome-all.css' %}"> {% endcomment %}
+<link rel="stylesheet" href="{% static 'assets/vendorsito/fonts/fontawesome/css/fontawesome-all.css' %}">
 {% endblock vendors_css %}
 
 {% block core_css %}
-  {% comment %} <link rel="stylesheet" href="{% static 'administrador/css/style.css' %}"> {% endcomment %}
+  <link rel="stylesheet" href="{% static 'administrador/css/style.css' %}">
 {% endblock core_css %}
 
 {% block custom_css %}
- {% comment %} <link rel="stylesheet" href="{% static 'storefront/css/custom.css' %}"> {% endcomment %}
 <style>
     html,
     body {
