--- a/projectjose/templates/storefront/base.html
+++ b/projectjose/templates/storefront/base.html
@@ -40,7 +40,7 @@
 {% block content %}
     <div class="dashboard-main-wrapper">
         {% block view %}
-            {% comment %} <div class="dashboard-header">
+            <div class="dashboard-header">
                 <nav class="navbar navbar-expand-lg bg-white fixed-top">
                     <a class="navbar-brand " href="#">
                         <img src="{% static 'img/brandb.png' %}" alt="White House" style="height:45px;">
@@ -52,7 +52,7 @@
                         </span>
                     </button>
                     </div>
-                    <div class="collapse navbar-collapse" id="navbarNav">
+                    {% comment %} <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto navbar-right-top">
                             {% if user.is_staff %}
                                 <div class="nav-user-info d-sm-none">
@@ -131,7 +131,7 @@
                                 </li>
                             {% endif %}
                         </ul>
-                    </div>
+                    </div> {% endcomment %}
                 </nav>
             </div>
 
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                 </div>
-            </div> {% endcomment %}
+            </div>
         {% endblock view %}
     </div>
 {% endblock content %}
