--- a/projectjose/templates/dashboard/base.html
+++ b/projectjose/templates/dashboard/base.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="navbar-nav ml-auto navbar-right-top">
-                            {% comment %} {% include 'prodabre/_widgets/_quick_action_toolbar.html' %} {% endcomment %}
+                          {% include 'dashboard/_widgets/_quick_action_toolbar.html' %}
                         </ul>
                     </div>
                     <div>
