--- a/projectjose/templates/dashboard/posts/image/_list_empty.html
+++ b/projectjose/templates/dashboard/posts/image/_list_empty.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/_widgets/_list_empty.html' %}
 
-{% block title %}No se ha registrado ningún producto aún.{% endblock title %}
+{% block title %}No se ha registrado ningúna Imagen aún.{% endblock title %}
 
 {% block action %}
     {% url 'dashboard:product-add' as btn_target %}
