--- a/projectjose/templates/storefront/auth/login.html
+++ b/projectjose/templates/storefront/auth/login.html
@@ -1,8 +1,7 @@
-{% include "storefront/auth/_forms/login.html" %}
-{% comment %} {% extends 'storefront/base.html' %}
+{% extends 'storefront/base.html' %}
 {% load static %}
 
-{% block vendors_css %}
+{% comment %} {% block vendors_css %}
 <link rel="stylesheet" href="{% static 'assets/vendorsito/bootstrap/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'assets/vendorsito/fonts/circular-std/style.css' %}">
 <link rel="stylesheet" href="{% static 'assets/vendorsito/fonts/fontawesome/css/fontawesome-all.css' %}">
@@ -28,7 +27,7 @@
         padding-bottom: 40px;
     }
 </style>
-{% endblock custom_css %}
+{% endblock custom_css %} {% endcomment %}
 
 {% block content %}
 <div class="splash-container">
@@ -48,4 +47,4 @@
         </div>
     </div>
 </div>
-{% endblock content %} {% endcomment %}
+{% endblock content %}
