--- a/projectjose/templates/storefront/base.html
+++ b/projectjose/templates/storefront/base.html
@@ -7,11 +7,8 @@
 
 {% block vendors_css %}
   <link rel="stylesheet" href="{% static 'assets/vendorsito/bootstrap/css/bootstrap.min.css' %}">
-      <!-- Íconos -->
-  <script src="https://kit.fontawesome.com/f8e43163b5.js" crossorigin="anonymous"></script>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Inria+Serif:400,700|Raleway:300,400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'assets/vendorsito/bootstrap/css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendorsito/fonts/fontawesome/css/fontawesome-all.css' %}">
 {% endblock vendors_css %}
 
 {% block core_css %}
@@ -162,6 +159,6 @@
 {% endblock content %}
 
 {% block vendors_js %}
-    <script src="{% static 'prodabre/vendor/jquery/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static 'prodabre/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'assets/vendorsito/jquery/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'assets/vendorsito/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 {% endblock vendors_js %}
