--- a/projectjose/templates/dashboard/services/_list_empty.html
+++ b/projectjose/templates/dashboard/services/_list_empty.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/_widgets/_list_empty.html' %}
 
-{% block title %}No se ha registrado ningún proyecto aún.{% endblock title %}
+{% block title %}No se ha registrado ningún Servicio aún.{% endblock title %}
 
 {% block action %}
     {% url 'dashboard:service-add' as btn_target %}
