--- a/projectjose/templates/base.html
+++ b/projectjose/templates/base.html
@@ -21,12 +21,12 @@
 
   {% endblock css %}
 
-  <!-- Íconos -->
+<!-- Íconos -->
   <script src="https://kit.fontawesome.com/f8e43163b5.js" crossorigin="anonymous"></script>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Inria+Serif:400,700|Raleway:300,400&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Inria+Serif:400,700|Raleway:300,400&display=swap"
+    rel="stylesheet">
 </head>
 
 <body class="ft-bodyn">
@@ -58,10 +58,10 @@
         <div class="col-sm-3 ftft4 text-right">
           <p class="ftsocial">
             {% if LINK_FACEBOOK %}
-              <a class="btn btn-circle" href="{{LINK_FACEBOOK}}" role="button"><i class="fab fa-facebook-f"></i></a>
+              <a class="btn btn-circle" href="{{LINK_FACEBOOK}}" role="button"><i class="fab fa-facebook-f"></i></a>&nbsp&nbsp
             {% endif %}
             {% if LINK_INSTAGRAM %}
-              <a class="btn btn-circle" href="{{LINK_INSTAGRAM}}" role="button"><i class="fab fa-instagram"></i></i></a>
+              <a class="btn btn-circle" href="{{LINK_INSTAGRAM}}" role="button"><i class="fab fa-instagram"></i></i></a>&nbsp&nbsp
             {% endif %}
             {% if LINK_LINKEDIN %}
               <a class="btn btn-circle" href="{{LINK_LINKEDIN}}" role="button"><i class="fab fa-linkedin-in"></i></a>
