--- a/projectjose/templates/dashboard/_widgets/_form_grouped.html
+++ b/projectjose/templates/dashboard/_widgets/_form_grouped.html
@@ -7,6 +7,7 @@
     <div class="card-body p-0">
     {% block forms %}
         {% crispy form %}
+        {{form.errors}}
     {% endblock forms %}
     </div>
     {% if not hide_buttons %}
