--- a/projectjose/static/css/styles.css
+++ b/projectjose/static/css/styles.css
@@ -96,9 +96,9 @@ div.ftmenu{
 }
 
 .btn-circle {
-  width: 30px;
-  height: 30px;
-  padding: 6px 0px;
+  width: 25px;
+  height: 25px;
+  padding: 3px 0px;
   border-radius: 15px;
   text-align: center;
   font-size: 12px;
@@ -122,6 +122,64 @@ i.fab.fa-facebook-f,i.fab.fa-instagram,i.fab.fa-linkedin-in{
   box-shadow: none;
 }
 
+/* Gallery css*/
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 200px;
+}
+
+.gallery img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  padding: 0.5em; 
+}
+
+.gallery a:nth-of-type(1) {
+  grid-column: 1 / span 2;
+  grid-row:1 / span 1;
+}
+.gallery a:nth-of-type(2) {
+  grid-column: 1 / span 2;
+  grid-row:2 / span 1;
+}
+.gallery a:nth-of-type(3) {
+  grid-column: 1 / span 2;
+  grid-row:3 / span 2;
+}
+.gallery a:nth-of-type(4) {
+  grid-column: 3 / span 1;
+  grid-row:1 / span 2;
+}
+.gallery a:nth-of-type(5) {
+  grid-column: 3 / span 1;
+  grid-row:3 / span 2;
+}
+.gallery a:nth-of-type(6) {
+  grid-column: 4 / span 1;
+  grid-row:1 / span 1;
+}
+.gallery a:nth-of-type(7) {
+  grid-column: 4 / span 1;
+  grid-row:2 / span 2;
+}
+.gallery a:nth-of-type(8) {
+  grid-column: 4 / span 1;
+  grid-row:4 / span 1;
+}
+.gallery a:nth-of-type(n+9) {
+  grid-column: span 2;
+  grid-row: span 1;
+}
+
+footer > div > hr{
+  border-color: #000;
+}
+
+
+
 @media only screen and (max-width: 450px) {
   #navpos1 {order: 3;}
   #navpos2 {order: 1;}
@@ -132,16 +190,37 @@ i.fab.fa-facebook-f,i.fab.fa-instagram,i.fab.fa-linkedin-in{
   p.ftsocial,.ftft1,.ftft2{
     text-align: center;
   }
+
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 200px;
+  }
+
+  .gallery img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    padding: 0.5em; 
+  }
+
+  .gallery a:nth-of-type(n) {
+    grid-column: 1 / span 1;
+    grid-row: span 1;
+  }  
+
 }
+
 
 @media only screen and (min-width: 768px) {
   .ftdesc{
-    padding-left: 75px;
+    padding-left: 55px;
   }
     .ft-contserv{
     padding-top: 30px;
     padding-bottom: 30px;
   }
+
 }
 
 @media only screen and (max-width: 991px){
@@ -206,3 +285,7 @@ i.fab.fa-facebook-f,i.fab.fa-instagram,i.fab.fa-linkedin-in{
   background-size: cover;
   z-index: -200;
 }
+
+
+
+
