--- a/projectjose/static/css/stylest.css
+++ b/projectjose/static/css/stylest.css
@@ -15,6 +15,12 @@ nav>div.container>div.container{
 }
 
 .navbar{
+  background-color: rgba(0,0,0,0);
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.navbar:hover{
   background-color: rgba(0,0,0,0.3);
   padding-top: 20px;
   padding-bottom: 20px;
@@ -300,6 +306,20 @@ h1.ft-posth1{
   white-space: nowrap;
 }
 
+.ft-postgal>.row::-webkit-scrollbar{
+  height: 4px;
+}
+
+.ft-postgal>.row::-webkit-scrollbar-track{
+  overflow-x: auto;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.ft-postgal>.row::-webkit-scrollbar-thumb{
+  overflow-x: auto;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
 body > div:nth-child(3) > div > div > div > div{
   background-color: rgba(0,0,0,0);
   padding: 4px;
@@ -322,14 +342,15 @@ body > div:nth-child(2) > div > div:nth-child(2) > div.col-lg-6{
 
 body > div:nth-child(2) > div > div:nth-child(2) > div.col-lg-6 > div{
   position: relative;
+  width: fit-content;
 }
 
 body > div:nth-child(2) > div > div:nth-child(2) > div.col-lg-6 > div:after{
   content: '';
   display: block;
   position: absolute;
-  top: 10px;
-  left: -10px;
+  top: 20px;
+  left: -20px;
   width: 100%;
   height: 400px;
   border: 1px solid #000;
@@ -337,9 +358,41 @@ body > div:nth-child(2) > div > div:nth-child(2) > div.col-lg-6 > div:after{
   z-index: -1
 }
 
+@media only screen and (max-width: 991px) {
+  body > div:nth-child(2) > div > div:nth-child(2) > div.col-lg-6 > div:after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 20px;
+    left: -20px;
+    width: 100%;
+    height: 400px;
+    border: 0px solid #000;
+    position: absolute;
+    z-index: -1
+  }
+}
+
+
 .ft-post-img{
-  width: 100%;
+  width: auto;
   height: 400px;
   object-position: 50% 50%;
   object-fit: cover;
+}
+
+footer > div > hr{
+  border-color: #000;
+}
+
+.btn-circle {
+  width: 25px;
+  height: 25px;
+  padding: 3px 0px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.42857;
+  background-color: #000;
+  border-color: #000;
 }
