--- a/projectjose/templates/core/contact.html
+++ b/projectjose/templates/core/contact.html
@@ -85,10 +85,10 @@
         <div class="col-sm-3 ftft4 text-right">
           <p class="ftsocial">
             {% if LINK_FACEBOOK %}
-              <a class="btn btn-circle" href="{{LINK_FACEBOOK}}" role="button"><i class="fab fa-facebook-f"></i></a>
+              <a class="btn btn-circle" href="{{LINK_FACEBOOK}}" role="button"><i class="fab fa-facebook-f"></i></a>&nbsp&nbsp
             {% endif %}
             {% if LINK_INSTAGRAM %}
-              <a class="btn btn-circle" href="{{LINK_INSTAGRAM}}" role="button"><i class="fab fa-instagram"></i></i></a>
+              <a class="btn btn-circle" href="{{LINK_INSTAGRAM}}" role="button"><i class="fab fa-instagram"></i></i></a>&nbsp&nbsp
             {% endif %}
             {% if LINK_LINKEDIN %}
               <a class="btn btn-circle" href="{{LINK_LINKEDIN}}" role="button"><i class="fab fa-linkedin-in"></i></a>
