--- a/projectjose/templates/dashboard/services/add.html
+++ b/projectjose/templates/dashboard/services/add.html
@@ -1,6 +1,4 @@
 {% extends './list.html' %}
-{% load crispy_forms_field %}
-{% load crispy_forms_tags %}
 {% load static %}
 
 {% block view_header_back %}
@@ -27,7 +25,7 @@
     <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
             <div class="card prodabre-card">
-                {% with form_name="form" %}
+                {% with form_name="form" multipart=True %}
                     {% include 'dashboard/_widgets/_form_grouped.html' %}
                 {% endwith %}
             </div>
