--- a/projectjose/templates/dashboard/services/detail.html
+++ b/projectjose/templates/dashboard/services/detail.html
@@ -30,12 +30,20 @@
                 </div>
                 <div class="card-body">
                     <h2 class="m-0">{{ object.title }}</h2>
-                    <h4 class="mt-3"><img src="{{object.icon.url}}" alt=""></h4>
+                    <h4 class="mt-3">
+                    {% if object.icon %}
+                      <img src="{{object.icon.url}}" alt="">
+                    {% endif %}
+                    </h4>
                     <dl class="m-0">
                         <dt>Contenido</dt>
                         <dd class="pl-3">{{ object.content }}</dd>
                     </dl>
-                    <h4 class="mt-3"><img src="{{object.image.url}}" alt="" style="width:30%;"></h4>
+                    <h4 class="mt-3">
+                    {% if object.image %}
+                      <img src="{{object.image.url}}" alt="" style="width:30%;">
+                    {% endif %}
+                    </h4>
                 </div>
                 <div class="card-footer">
                     {% url 'dashboard:service-edit' pk=object.pk as btn_target %}
