--- a/projectjose/templates/dashboard/base_0.html
+++ b/projectjose/templates/dashboard/base_0.html
@@ -8,6 +8,7 @@
     {% endcomment %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="{% static 'img/brandw.png' %}" />
 
     {% block meta %}
     {% endblock meta %}
