--- a/projectjose/templates/core/post.html
+++ b/projectjose/templates/core/post.html
@@ -34,15 +34,25 @@
   <div id="carousel-imagenes" class="carousel slide" data-ride="carousel">
 
     <!-- Carousel Imágenes-->
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'img/car-1.png' %}" class="d-block w-100 ft-carimg" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'img/car-2.png' %}" class="d-block w-100 ft-carimg" alt="...">
-      </div>
+     <div class="carousel-inner">
+
+      {% for post in posts   %}
+            {% for image_ in post.images.all  %}
+              {% if post.pk == object.pk %}
+                <div class="carousel-item active">
+                <a href="{% url 'posts:post-detail' the_slug=post.slug %}"><img class="d-block w-100 ft-carimg" alt="..." src="{{image_.image.url}}" /></a>
+                </div>
+              {% else  %}
+                <div class="carousel-item">
+                  <a href="{% url 'posts:post-detail' the_slug=post.slug %}"><img class="d-block w-100 ft-carimg" alt="..." src="{{image_.image.url}}" /></a>
+                </div>
+              {% endif  %}
+        {% endfor %}
+      {% endfor %}
+
     </div>
     <!-- /Carousel Imágenes-->
+
 
     <!-- Carousel Controles-->
     <a class="carousel-control-prev" href="#carousel-imagenes" role="button" data-slide="prev" style="font-size: 28px">
