--- a/projectjose/templates/core/contact.html
+++ b/projectjose/templates/core/contact.html
@@ -114,7 +114,7 @@
             </button>
           </div>
           <div id="navpos2" class="col text-center">
-          <a class="navbar-brand mx-auto" href="index.html"><img src="{% static 'img/brandw.png' %}" class="responsive" style="max-height: 40px;width: auto;"/></a>
+          <a class="navbar-brand mx-auto" href="{% url 'core:index' %}"><img src="{% static 'img/brandw.png' %}" class="responsive" style="max-height: 40px;width: auto;"/></a>
           </div>
           <div id="navpos3" class="col text-right">
           </div>
