--- a/projectjose/templates/core/post.html
+++ b/projectjose/templates/core/post.html
@@ -56,11 +56,12 @@
 
     <!-- Carousel Controles-->
     <a class="carousel-control-prev" href="#carousel-imagenes" role="button" data-slide="prev" style="font-size: 28px">
-      <i class="fas fa-chevron-circle-left"></i>
+      <img src="{% static 'assets/images/posticon.svg' %}" width="45px" alt="...">
       <span class="sr-only">Anterior</span>
     </a>
     <a class="carousel-control-next" href="#carousel-imagenes" role="button" data-slide="next" style="font-size: 28px">
-      <i class="fas fa-chevron-circle-right"></i>
+      <img src="{% static 'assets/images/previcon.svg' %}" width="45px" alt="...">
+      <!-- <i class="fas fa-chevron-circle-right"></i> -->
       <span class="sr-only">Siguiente</span>
     </a>
     <!-- /Carousel Controles-->
